--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,23 @@
 }
 
 header {
-    background-color: darkturquoise;
+    background-color: deepskyblue;
+    height: 112px;
+    line-height: 112px;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li {
+    display: inline-block;
+}
+
+header nav {
+    float: right;
+}
+
+.logo img{
+margin-top: 300px;
 }
