--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,11 @@ margin-top: 300px;
 
 header nav ul li a{
     padding-right: 30px;
+    font-weight: bold;
+    color: white;
+}
+
+header nav ul li a:hover{
+    text-decoration: none;
+    color: red;
 }
