--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ header nav ul li a{
     padding-right: 30px;
     font-weight: bold;
     color: white;
+    transition: all 0.5s ease-in;
 }
 
 header nav ul li a:hover{
