--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ header nav ul li a:hover{
 }
 
 .title img {
- size: 20%;
+    height: 20%;
+    width: 20%;
 }
 
 .skills {
@@ -95,5 +96,6 @@ header nav ul li a:hover{
 
 .projects img
 {
-    size: 20%;
+    height: 20%;
+    width: 20%;
 }
