--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,23 @@ header nav ul li a:hover{
 .skills {
     padding-top: 150px;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 0.25fr;
+    grid-template-areas: "overlap";
+}
+
 .intro-row {
     background-color: blue;
     height: 400px;
     align-content: center;
     text-align: center;
+    grid-area: overlap;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+
 }
 
 .intro-row h2, p {
@@ -69,29 +81,32 @@ header nav ul li a:hover{
 }
 
 .skills-left, .skills-right{
-    height: 500px;
+    height: 200px;
     width: 40%;
     background-color: rgb(255, 255, 255);
     border-color: black;
     border-style: solid;
     border-width: 5px;
     text-align: center;
+    grid-area: overlap;
+    grid-row: 2 / span 3;
 }
 
 .skills-left {
-    float: left;
-    margin-left: 50px;
+    grid-column: 1;
+    justify-self: center;
 }
 
 .skills-right {
-    float: right;
-    margin-right: 50px;
+    grid-column: 2;
+    justify-self: center;
+    
 }
 
 .projects {
     align-content: center;
     text-align: center;
-    margin-top: 600px;
+    margin-top: 200px;
 }
 
 .projects img
