--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,41 @@ header nav ul li a:hover{
     margin-top: 200px;
 }
 
-.projects img
+.project-grid {
+    display: grid;
+    grid-template-areas: "projects";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+
+/* .projects img
 {
-    height: 20%;
-    width: 20%;
+    height: 5%;
+    width: 5%;
+}*/
+
+.project-image {
+ grid-row: 1;
+ grid-column: 1;
+}
+.project-image1{
+    grid-row: 1;
+    grid-column: 2;
+}
+.project-image2{
+    grid-row: 1;
+    grid-column: 3;
+}
+.project-image3{
+    grid-row: 2;
+    grid-column: 1;
+}
+.project-image4{
+    grid-row: 2;
+    grid-column: 2;
+}
+.project-image4{
+    grid-row: 2;
+    grid-column: 3;
 }
