--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ header nav ul li a:hover{
  .project-grid img {
      height: 20%;
      width: 20%;   
+     justify-content: center;
  }
 
 .project-image {
