--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ header nav ul li a:hover{
      height: 20%;
      width: 20%;   
      justify-content: center;
+
  }
 
 .project-image {
@@ -145,3 +146,15 @@ header nav ul li a:hover{
     grid-row: 2;
     grid-column: 3;
 }
+
+/* FOOTER */
+footer {
+    width: 100%;
+    background-color: blue;
+    padding: 0px 0px;
+}
+
+footer div {
+    display: inline-block;
+} 
+
