--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'VT323', monospace;
+    color:#272932
 }
 
 header {
@@ -29,7 +30,7 @@ margin-top: 300px;
 header nav ul li a{
     padding-right: 30px;
     font-weight: bold;
-    color: black;
+    color: #272932;
     transition: all 0.5s ease-in;
 }
 
@@ -65,7 +66,7 @@ header nav ul li a:hover{
 }
 
 .intro-row {
-    background-color: blue;
+    background-color: #4D7EA8;
     height: 400px;
     align-content: center;
     text-align: center;
@@ -84,9 +85,11 @@ header nav ul li a:hover{
     height: 200px;
     width: 40%;
     background-color: rgb(255, 255, 255);
-    border-color: black;
+    border-color: #272932;
     border-style: solid;
-    border-width: 5px;
+    border-width: 2px;
+    border-top-left-radius: 100px;
+    border-bottom-right-radius: 100px;
     text-align: center;
     grid-area: overlap;
     grid-row: 2 / span 3;
@@ -122,27 +125,35 @@ header nav ul li a:hover{
 
  }
 
-.project-image {
+ .project-image{
+    margin: 0 150px 20px 150px;
+    padding: 20px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #272932;
+ }
+
+#project-image {
  grid-row: 1;
  grid-column: 1;
 }
-.project-image1{
+#project-image1{
     grid-row: 1;
     grid-column: 2;
 }
-.project-image2{
+#project-image2{
     grid-row: 1;
     grid-column: 3;
 }
-.project-image3{
+#project-image3{
     grid-row: 2;
     grid-column: 1;
 }
-.project-image4{
+#project-image4{
     grid-row: 2;
     grid-column: 2;
 }
-.project-image5{
+#project-image5{
     grid-row: 2;
     grid-column: 3;
 }
@@ -150,7 +161,7 @@ header nav ul li a:hover{
 /* FOOTER */
 footer {
     width: 100%;
-    background-color: blue;
+    background-color:#4D7EA8;
     padding: 0px 0px;
 }
 
