--- a/css/style.css
+++ b/css/style.css
@@ -126,8 +126,8 @@ header nav ul li a:hover{
  }
 
  .project-image{
-    margin: 0 150px 20px 150px;
-    padding: 20px;
+    /* margin: 0 150px 20px 150px;
+    padding: 20px; */
     border-style: solid;
     border-width: 2px;
     border-color: #272932;
