--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ header nav ul li a:hover{
  .project-grid img {
      height: 20%;
      width: 20%;   
-     justify-content: center;
+     /* justify-content: center; */
 
  }
 
