--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,13 @@ header nav ul li a:hover{
 .project-grid {
     display: grid;
     grid-template-areas: "projects";
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    justify-items: center;
+    grid-gap: 5px;
+    grid-row-gap: 0px;
+    /* grid-template-rows: 1fr 1fr 1fr; */
 }
  .project-grid img {
-     height: 100%;
      width: 100%;   
      /* justify-content: center; */
 
@@ -128,12 +130,12 @@ header nav ul li a:hover{
  .project-image{
     /* margin: 0 150px 20px 150px;
     padding: 20px; */
-    border-style: solid;
+    /* border-style: solid;
     border-width: 2px;
-    border-color: #272932;
+    border-color: #272932; */
  }
 
-#project-image {
+/* #project-image {
  grid-row: 1;
  grid-column: 1;
 }
@@ -156,7 +158,7 @@ header nav ul li a:hover{
 #project-image5{
     grid-row: 2;
     grid-column: 3;
-}
+} */
 
 /* FOOTER */
 footer {
