--- a/css/style.css
+++ b/css/style.css
@@ -127,13 +127,13 @@ header nav ul li a:hover{
 
  }
 
- .project-image{
-    /* margin: 0 150px 20px 150px;
-    padding: 20px; */
-    /* border-style: solid;
+ /* .project-image{
+     margin: 0 150px 20px 150px;
+    padding: 20px;
+    border-style: solid;
     border-width: 2px;
-    border-color: #272932; */
- }
+    border-color: #272932; 
+ }*/
 
 /* #project-image {
  grid-row: 1;
